# pydi-framework

./: LICENSE.md  README.md  index.html  pyproject.toml
.github/workflows/: release.yaml
assets/: index-1Vqebyvl.css  index-3MSn_7RY.js  index-B9nQqpIn.css  index-BNJxOuY1.css  index-BYnRkZd5.js  index-BxAjKT2s.js  index-CBiwi_As.js  index-CIyG_ps_.js  index-CbXtleOH.js  index-CxZsMtcm.css  index-DADXqkLv.js  index-DI2tbJBR.js  index-DSNhhRnv.js  index-DrDUNVMj.js  index-DvK2yojc.js  index-HzdtHT9K.css  index-mVaxyrmX.css
docs/: index.html  package-lock.json  package.json  vite.config.ts
docs/src/: App.tsx  main.css  main.tsx
docs/src/components/: code-window.tsx  footer.tsx  navbar.tsx  section-eyebrow.tsx
docs/src/data/: code.ts  static.ts
docs/src/layouts/: main.tsx
docs/src/pages/: Home.tsx
examples/fastapi/: crud.py  db.py  main.py  models.py
examples/vanilla/: basic.py  scopes.py
src/di/: __init__.py  exceptions.py  inject.py  locator.py  registration_mode.py  registry.py  store.py
tests/: test_di.py  test_inject.py  test_locator.py  test_registry.py
