[project]
name = "pydi-framework"
version = "1.0.0"
description = "Python Dependency Injection Framework"
readme = "README.md"
authors = [
    { name = "Mounir Melzi" }
]

requires-python = ">=3.14"

dependencies = []

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]


[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"
