[project]
name = "pydi-framework"
version = "1.0.0"
description = "Python Dependency Injection Framework"
readme = "README.md"
authors = [
    { name = "Mounir Melzi" },
]
maintainers = [
    { name = "Mounir Melzi" },
]
keywords = [
    "Dependency injection",
    "DI",
    "Design patterns",
    "Factory",
    "Singleton",
    "Lazy Singleton",
]

requires-python = ">=3.14"

dependencies = []

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]


[project.urls]
Homepage = "https://github.com/mounirmelzi/pydi-framework"
Documentation = "https://github.com/mounirmelzi/pydi-framework"
Download = "https://github.com/mounirmelzi/pydi-framework"


[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"
