[project]
name = "pydi-framework"
version = "1.0.0"
description = "Python Dependency Injection Framework"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE.txt"]
authors = [
    { name = "Mounir Melzi" },
]
maintainers = [
    { name = "Mounir Melzi" },
]
keywords = [
    "Dependency injection",
    "DI",
    "Design patterns",
    "Factory",
    "Singleton",
    "Lazy Singleton",
]
classifiers = [
  "Programming Language :: Python",
]

requires-python = ">=3.14"

dependencies = []

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]


[project.urls]
Homepage = "https://mounirmelzi.github.io/pydi-framework/"
Documentation = "https://mounirmelzi.github.io/pydi-framework/"
Repository = "https://github.com/mounirmelzi/pydi-framework.git"
Download = "https://pypi.org/project/pydi-framework/"


[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"
